--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "unique-slug": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
